--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,14 +1,3 @@
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    font-family: "Proxima Nova", sans-serif;
-}
-
 /* ----------------------------------------
 
     FONTS
@@ -39,398 +28,247 @@ body {
     font-weight: 700;
 }
 
-/* ----------------------------------------
-
-    LOGO
-
----------------------------------------- */
-
-.logo-background {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 50%;
-}
-
-.logo-overlay {
-    position: relative;
-    z-index: 1;
-}
-
-.logo {
-    width: 1000px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+body {
+    margin: 0;
+    overflow-x: hidden;
+    font-family: "Proxima Nova", sans-serif;
 }
 
 /* ----------------------------------------
 
-    LANDING
+    GENERAL
 
 ---------------------------------------- */
 
-.landing {
-    background-color: #F4F4F4;
-    width: 100%;
-    height: 82vh;
-    position: relative;
+img {
+    max-width: 100%;
 }
 
-.landing-container {
-    padding: 6%;
-    position: relative;
+* {
+    box-sizing: border-box;
 }
 
 /* ----------------------------------------
 
-    MENU
+    LOADER
 
 ---------------------------------------- */
 
+.loader {
+    position: relative;
+    height: 100vh;
+}
 
-.menu {
+.loader__light {
     position: absolute;
+    top: 0;
     left: 0;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    z-index: 20;
-    cursor: pointer;
-    padding: 15px;
+    width: 100vw;
+    height: 100vh;
+    background-color: #f8f8f8;
 }
 
-.menu .line {
-    height: 3px;
-    width: 40px;
-    margin: 7px 0;
-    background-color: #404040;
-    transition: all .5s ease;
-    position: relative;
-    top: 0px;
-}
-
-.menu .line:nth-child(1) {
-    width: 34px;
-    margin-left: 6px;
-}
-
-.menu .line:nth-child(2) {
-    width: 40px;
-    margin-left: 0;
-}
-
-.menu .line:nth-child(3) {
-    width: 28px;
-    margin-left: 12px;
-}
-
-.opend .menu:hover .line:nth-child(1) {
-    width: 40px;
-    margin-left: 0;
-    transform: rotate(90deg);
-}
-
-.opend .menu:hover .line:nth-child(2) {
-    width: 0px;
-    margin-left: 20px;
-}
-
-.opend .menu:hover .line:nth-child(3) {
-    width: 40px;
-    margin-left: 0;
-    transform: rotate(0deg);
-}
-
-.opend .menu .line {
-    background-color: #7a7a7a;
-}
-
-.opend .menu .line:nth-child(1) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-    width: 40px;
-    margin-left: 0;
-    position: relative;
-    top: 10px;
-}
-
-.opend .menu .line:nth-child(2) {
-    width: 0px;
-    margin-left: 20px;
-}
-
-.opend .menu .line:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    width: 40px;
-    margin-left: 0;
-    position: relative;
-    top: -10px;
-}
-
-.opend .menu p {
-    color: #7a7a7a;
-}
-
-.menu:hover .line:nth-child(1) {
-    width: 40px;
-    margin-left: 0;
-}
-
-.menu:hover .line:nth-child(2) {
-    width: 28px;
-    margin-left: 12px;
-}
-
-.menu:hover .line:nth-child(3) {
-    width: 34px;
-    margin-left: 6px;
-}
-
-.menu p {
+.loader__dark {
     position: absolute;
-    right: -35px;
-    top: 8px;
-    font-weight: bold;
-    color: #404040;
-    -webkit-transform: rotate(-90deg);
-    -moz-transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    -o-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-    transition: all .5s ease;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    height: 100vh;
+    background-color: #202020;
+    animation: fake-loading 2s ease forwards;
 }
 
-.menu-peek {
+.loader__force-full-width {
+    width: 100vw;
     position: absolute;
     top: 0;
     left: 0;
     height: 100vh;
-    width: 6%;
-    background-color: #FFF;
-    transition: all .6s ease .05s;
+}
+
+.loader__image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 500px;
+
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.loader__image img {
+    width: 100%;
+    position: relative;
     z-index: 10;
 }
 
-.opend .menu-peek {
-    transition: all .4s ease;
-}
-
-.menu-overlay {
+.loader__logo-background {
     position: absolute;
-    width: 100%;
-    height: 100vh;
-    background-color: #222222;
-    left: -100%;
-    z-index: 15;
-    transition: all .4s ease 0s;
+    height: 70px;
+    width: 350px;
+    border: 10px solid #343434;
+    top: -5px;
+    left: 110px;
 }
 
-.opend .menu-overlay {
-    transition: all .6s ease .2s;
-}
-
-.menu-overlay {
-    padding: 15%;
-}
-
-.menu-overlay ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.menu-overlay ul li {
-    margin-bottom: 30px;
-}
-
-.menu-overlay ul li a {
-    color: #FFF;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 4em;
-    position: relative;
-}
-
-.menu-close {
+.loader__extra-background {
     position: absolute;
-}
-
-.menu-overlay ul li.sub-menu {
-    margin-bottom: 0px;
-}
-
-.menu-overlay ul li.sub-menu a {
-    color: #7a7a7a;
-    font-size: 1.5em;
-    margin-bottom: 0;
-}
-
-.menu-overlay ul li:not(.sub-menu) a::after {
-    content: "";
-    position: absolute;
+    top: 0;
     left: 0;
-    bottom: 10px;
-    height: 10px;
-    width: 0%;
-    background-color: #00ffff;
-    z-index: -1;
-    transition: all .3s ease;
+    height: 100vh;
+    width: 100vw;
 }
 
-.menu-overlay ul li:not(.sub-menu) a:hover::after {
-    width: 100%;
+.loader__scroll-down {
+    position: absolute;
+    left: 50%;
+    bottom: 30px;
+    border: 5px solid #494949;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    padding: 9px;
+    overflow: hidden;
+}
+
+.loader__scroll-down img {
+    position: relative;
+    top: 0px;
+    animation: scroll-down 2s linear infinite;
+}
+/* ----------------------------------------
+
+    BITS
+
+---------------------------------------- */
+
+.bits__one {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    width: 100px;
+    height: 100px;
+}
+
+.bits__two {
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    width: 120px;
+    height: 120px;
+}
+
+.bits__three {
+    position: absolute;
+    top: 80%;
+    left: 10%;
+    width: 150px;
+    height: 150px;
+}
+
+.bits__four {
+    position: absolute;
+    top: 10%;
+    left: 90%;
+    width: 160px;
+    height: 160px;
+}
+
+.bits__five {
+    position: absolute;
+    top: 60%;
+    left: 70%;
+    width: 170px;
+    height: 170px;
 }
 
 /* ----------------------------------------
 
-    CONTENT
+    FOOTER
 
 ---------------------------------------- */
 
-.content {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
+
+footer {
+    padding: 30px;
+    color: #FFF;
+    margin-top: 400px;
+    background-color: #202020;
+    text-align: center;
 }
 
-.content-bg {
-    background-color: #e8e8e8;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 0%;
-    width: 100%;
-    z-index: 11;
-    transition: all .5s ease .2s;
-}
-
-/* */
-
-.content-name {
-    font-weight: bold;
-    font-size: 2em;
-    overflow: hidden;
-    height: 33px;
-    width: 300px;
-    text-transform: uppercase;
-    position: absolute;
-    right: 100px;
-    top: 50px;
-    z-index: 14;
-}
-
-.content-name p {
-    height: 33px;
-    position: relative;
-    top: 0;
-    margin: 0;
-    text-align: right;
-    transition: all .5s ease;
-    color: #282828;
-}
-
-/* */
-
-.content-subname {
-    font-weight: bold;
-    letter-spacing: 1px;
-    overflow: hidden;
-    height: 17px;
-    width: 300px;
-    text-transform: uppercase;
-    position: absolute;
-    right: 100px;
-    top: 80px;
-    z-index: 14;
-}
-
-.content-subname p {
-    height: 17px;
-    position: relative;
-    top: 0;
-    margin: 0;
-    text-align: right;
-    transition: all .5s ease .1s;
-    color: #585858;
-}
-
-/* */
-
-.content-description {
-    font-weight: bold;
-    letter-spacing: 1px;
-    overflow: hidden;
-    height: 130px;
-    width: 300px;
-    position: absolute;
-    right: 100px;
-    top: 120px;
-    z-index: 14;
-}
-
-.content-description p {
-    position: relative;
-    top: 0;
-    margin: 0;
-    text-align: right;
-    transition: all .5s ease .2s;
-    height: 130px;
-    color: #404040;
-}
-
-/* */
-
-.content-counter {
-    position: absolute;
-    top: 50%;
-    right: 12px;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    z-index: 14;
-}
-
-.content-counter-outsideline {
-    width: 6px;
-    height: 100px;
-    background-color: #ffffff;
-}
-
-.content-counter-insideline {
-    width: 6px;
-    height: 0%;
-    transition: all .5s ease;
-    background-color: cyan;
-}
-
-.content-counter a {
-    font-weight: bold;
-    font-size: 2em;
-    color: #404040;
+footer a {
+    color: #666666;
+    transition: all .2s ease;
     text-decoration: none;
+}
+
+footer a:hover {
+    color: #00ffff;
+}
+
+.footer__copyright {
+    color: #4a4a4a;
+}
+
+.footer__heart {
+    animation: heartbeat 1300ms ease 0s infinite normal;
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    text-indent: -9999px;
+    width: 12px;
+    height: 12px;
+    transform: rotate(45deg) scale(1);
+    transform-origin: 50% 50%;
+    margin: 0px 5px;
+    top: -2px;
+}
+
+.footer__heart:after, .footer__heart:before {
+    position: absolute;
+    content: "";
+    background: #00ffff
+}
+
+.footer__heart:before {
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+    top: 4px;
+    left: 0;
+    width: 8px;
+    height: 8px;
+}
+
+.footer__heart:after {
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    top: 0;
+    left: 4px;
+    width: 8px;
+    height: 12px;
+}
+
+.footer__extra ul {
+    text-align: center;
+    list-style: none;
+    margin: 40px 0;
+    padding: 0;
+}
+
+.footer__extra ul li {
+    display: inline-block;
+}
+
+.footer__extra ul li a {
+    padding: 10px;
+    color: #eeeeee;
+    transition: all .2s ease;
+}
+
+.footer__extra ul li a:hover {
+    color: #00ffff;
 }
