--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,7 +49,7 @@ img {
 }
 
 h2 span {
-    color: cyan;
+    color: #00ffc3;
 }
 
 /* ----------------------------------------
@@ -255,12 +255,24 @@ h2 span {
 
 /* ----------------------------------------
 
+    WORK
+
+---------------------------------------- */
+
+.work {
+
+}
+
+
+/* ----------------------------------------
+
     SERVICES
 
 ---------------------------------------- */
 
 .services {
     padding: 150px 0;
+    background-color: #f3f3f3;
 }
 
 .services h2 {
@@ -306,6 +318,42 @@ h2 span {
     line-height: 27px;
     color: #474747;
 }
+
+/* ----------------------------------------
+
+    CONTACT
+
+---------------------------------------- */
+
+.contact {
+    padding: 150px 0;
+}
+
+.contact input {
+    display: block;
+    width: 100%;
+    border: 3px solid #4a4a4a;
+    padding: 10px;
+    color: #2a2a2a;
+    margin-bottom: 30px;
+}
+
+.contact textarea {
+    display: block;
+    width: 100%;
+    border: 3px solid #4a4a4a;
+    padding: 10px;
+    color: #2a2a2a;
+}
+
+.contact label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    color: #4a4a4a;
+}
+
 
 /* ----------------------------------------
 
