--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1562,6 +1562,7 @@ body {
 .intro .intro__project p {
   line-height: 30px;
   margin-bottom: 30px;
+  font-weight: 300;
 }
 
 .intro .intro__project a {
@@ -1742,7 +1743,7 @@ body {
 
 .menu .menu__item a {
   text-decoration: none;
-  color: #FFF;
+  color: #0c0c0c;
   font-weight: bold;
 }
 
@@ -1768,7 +1769,7 @@ body {
   bottom: 5px;
   right: 0;
   height: 2px;
-  background-color: #FFF;
+  background-color: #0c0c0c;
   width: 0%;
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
@@ -1791,6 +1792,7 @@ body {
   right: 0;
   height: 100vh;
   width: 100%;
+  pointer-events: none;
 }
 
 .status__ready .transition .transition__layer {
@@ -1820,23 +1822,143 @@ body {
   transition: .8s ease .4s;
 }
 
-.status__transition--start .transition .transition__layer {
-  -webkit-transition: 0s;
-  transition: 0s;
-}
-
 .status__transition--start .transition .transition__layer.transition__layer--1 {
-  left: -20%;
-  width: 20%;
+  -webkit-animation: transition--1 1s ease 0s normal forwards;
+          animation: transition--1 1s ease 0s normal forwards;
 }
 
 .status__transition--start .transition .transition__layer.transition__layer--2 {
-  left: -20%;
-  width: 20%;
+  -webkit-animation: transition--1 1s ease .2s normal forwards;
+          animation: transition--1 1s ease .2s normal forwards;
 }
 
 .status__transition--start .transition .transition__layer.transition__layer--3 {
-  left: -20%;
-  width: 20%;
+  -webkit-animation: transition--1 1s ease .3s normal forwards;
+          animation: transition--1 1s ease .3s normal forwards;
+}
+
+@-webkit-keyframes transition--1 {
+  0% {
+    left: 100%;
+  }
+
+  100% {
+    left: -80%;
+    width: 70%;
+  }
+}
+
+@keyframes transition--1 {
+  0% {
+    left: 100%;
+  }
+
+  100% {
+    left: -80%;
+    width: 70%;
+  }
+}
+
+.about {
+  min-height: 100vh;
+}
+
+.about .about__container {
+  position: relative;
+  margin-top: 200px;
+  padding-left: 400px;
+}
+
+.about .about__container .about__image {
+  top: 0;
+  left: 200px;
+  opacity: 0;
+  -webkit-transition: all .8s ease .5s;
+  transition: all .8s ease .5s;
+  background: url(/images/about.jpg?8a6cebcf0885d18c6a8e61a16a3f049b) center center;
+  background-size: cover;
+  width: 600px;
+  height: 450px;
+  position: absolute;
+}
+
+.about .about__container .about__image::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 255, 255, 0.8);
+}
+
+.about .about__container .about__content {
+  position: relative;
+  padding-top: 50px;
+  left: 200px;
+  opacity: 0;
+  -webkit-transition: all .8s ease .6s;
+  transition: all .8s ease .6s;
+  color: #1d1d1d;
+}
+
+.about .about__container .about__content h1 {
+  font-size: 2em;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.about .about__container .about__content h1 span {
+  display: block;
+  font-size: 1.4em;
+}
+
+.about .about__container .about__content .about__quote {
+  font-style: italic;
+  font-weight: 300;
+  line-height: 30px;
+  margin-bottom: 30px;
+}
+
+.about .about__container .about__content .about__quote span {
+  position: relative;
+}
+
+.about .about__container .about__content .about__quote span::after {
+  content: "";
+  position: absolute;
+  top: 45%;
+  left: 0;
+  height: 3px;
+  width: 100%;
+  background-color: #000;
+}
+
+.about .about__container .about__content .about__socials {
+  font-weight: bold;
+  font-size: .9em;
+  text-transform: uppercase;
+}
+
+.about .about__container .about__content .about__socials a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 0 10px;
+  color: #1d1d1d;
+}
+
+.about .about__container .about__content .about__socials a:first-of-type {
+  padding-left: 0;
+}
+
+.status__ready .about__container .about__image {
+  left: 0px;
+  opacity: .7;
+}
+
+.status__ready .about__container .about__content {
+  left: 0px;
+  opacity: 1;
 }
 
