--- a/resources/assets/sass/components/menu.scss
+++ b/resources/assets/sass/components/menu.scss
@@ -17,7 +17,7 @@
 
     a {
       text-decoration: none;
-      color: #FFF;
+      color: #0c0c0c;
       font-weight: bold;
 
       .menu__accent {
@@ -39,7 +39,7 @@
           bottom: 5px;
           right: 0;
           height: 2px;
-          background-color: #FFF;
+          background-color: #0c0c0c;
           width: 0%;
           transition: all .2s ease;
         }
