--- a/resources/assets/sass/components/transition.scss
+++ b/resources/assets/sass/components/transition.scss
@@ -8,6 +8,7 @@
     right: 0;
     height: 100vh;
     width: 100%;
+    pointer-events: none;
 
     .transition__layer {
       position: absolute;
@@ -38,22 +39,27 @@
 .status__transition--start {
   .transition {
     .transition__layer {
-      transition: 0s;
-
       &.transition__layer--1 {
-        left: -20%;
-        width: 20%;
+        animation: transition--1 1s ease 0s normal forwards;
       }
 
       &.transition__layer--2 {
-        left: -20%;
-        width: 20%;
+        animation: transition--1 1s ease .2s normal forwards;
       }
 
       &.transition__layer--3 {
-        left: -20%;
-        width: 20%;
+        animation: transition--1 1s ease .3s normal forwards;
       }
     }
+  }
+}
+
+@keyframes transition--1 {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: -80%;
+    width: 70%;
   }
 }
