--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -8,3 +8,8 @@ $white: #f1f1f1;
 
 $primary: #00FFFF;
 $accent: #0DFF76;
+
+$easing-hard: cubic-bezier(.8,0,0,.8);
+$easing-normal: cubic-bezier(.5,0,0,.5);
+$easing-out: cubic-bezier(.3,.3,0,1);
+$easing-in: cubic-bezier(0,1,.3,.3);
