--- a/resources/assets/sass/components/about.scss
+++ b/resources/assets/sass/components/about.scss
@@ -24,7 +24,11 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background: rgba(0, 255, 255, 0.8);
+
+        background: #00ffff;
+        background: -moz-linear-gradient(-45deg, rgba(0, 255, 255, 0.8) 0%, #0dff76 100%);
+        background: -webkit-linear-gradient(-45deg, rgba(0, 255, 255, 0.8) 0%,#0dff76 100%);
+        background: linear-gradient(135deg, rgba(0, 255, 255, 0.8) 0%,#0dff76 100%);
       }
     }
 
@@ -37,20 +41,20 @@
       color: #1d1d1d;
 
       h1 {
-        font-size: 2em;
+        font-size: 3em;
         font-weight: bold;
-        text-transform: uppercase;
         margin-bottom: 30px;
+        line-height: 60px;
 
         span {
           display: block;
-          font-size: 1.4em;
+          font-size: 1.2em;
         }
       }
 
       .about__quote {
         font-style: italic;
-        font-weight: 300;
+        font-weight: 400;
         line-height: 30px;
         margin-bottom: 30px;
 
@@ -60,7 +64,7 @@
           &::after {
             content: "";
             position: absolute;
-            top: 45%;
+            top: 50%;
             left: 0;
             height: 3px;
             width: 100%;
