--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -2023,7 +2023,7 @@ body {
 
 .status__ready .about__container .about__image {
   left: 0px;
-  opacity: .7;
+  opacity: 1;
 }
 
 .status__ready .about__container .about__content {
