--- a/resources/assets/sass/components/about.scss
+++ b/resources/assets/sass/components/about.scss
@@ -97,7 +97,7 @@
   .about__container {
     .about__image {
       left: 0px;
-      opacity: .7;
+      opacity: 1;
     }
 
     .about__content {
